[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/GravityBold-32.tres" type="DynamicFont" id=1]
[ext_resource path="res://Main/Game.gd" type="Script" id=2]
[ext_resource path="res://Main/Board.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "advance_turn"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("GUI/PlayerTurnLabel:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GUI/PlayerTurnLabel:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 659.2 ), Vector2( -256, 559 ), Vector2( 0, 659.2 ) ]
}

[node name="Game" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="GUI" type="CanvasLayer" parent="."]

[node name="PlayerTurnLabel" type="Label" parent="GUI"]
anchor_left = 0.5
anchor_top = 0.9
anchor_right = 0.5
anchor_bottom = 0.97
margin_left = -512.0
margin_top = -32.0
margin_right = 512.0
custom_fonts/font = ExtResource( 1 )
text = "Player 1's Turn"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Board" type="Node2D" parent="."]
position = Vector2( 114, 118 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="CardShowTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/advance_turn = SubResource( 1 )
[connection signal="card_flipped" from="Board" to="." method="_on_Board_card_flipped"]
[connection signal="game_ended" from="Board" to="." method="_on_Board_game_ended"]
[connection signal="timeout" from="CardShowTimer" to="." method="_on_CardShowTimer_timeout"]
